<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?android:attr/dividerHorizontal"
    android:orientation="vertical"
    android:showDividers="middle"
    tools:ignore="NewApi">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/intent_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <!--
            <com.android.pvamu.androidmalwaredetector.widget.UnderlinedTextView
                style="@style/TextHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="INTENT TYPE:" />

            <com.android.pvamu.androidmalwaredetector.widget.BlockEnterEditText
                android:id="@+id/action_edit"
                style="@style/EditTextNoSuggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no_value_text" />
                -->

            <com.android.pvamu.androidmalwaredetector.widget.UnderlinedTextView
                style="@style/TextHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intent_data_title" />

            <com.android.pvamu.androidmalwaredetector.widget.BlockEnterEditText
                android:id="@+id/data_edit"
                style="@style/EditTextNoSuggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no_value_text" />

            <com.android.pvamu.androidmalwaredetector.widget.UnderlinedTextView
                style="@style/TextHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intent_mime_type_title" />

            <com.android.pvamu.androidmalwaredetector.widget.BlockEnterEditText
                android:id="@+id/type_edit"
                style="@style/EditTextNoSuggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no_value_text" />

            <com.android.pvamu.androidmalwaredetector.widget.UnderlinedTextView
                style="@style/TextHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intent_uri_title" />

            <com.android.pvamu.androidmalwaredetector.widget.BlockEnterEditText
                android:id="@+id/uri_edit"
                style="@style/EditTextNoSuggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no_value_text" />

            <com.android.pvamu.androidmalwaredetector.widget.UnderlinedTextView
                android:id="@+id/intent_categories_header"
                style="@style/TextHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intent_categories_title" />

            <LinearLayout
                android:id="@+id/intent_categories_layout"
                style="@style/ListLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
<!--
            <com.android.pvamu.androidmalwaredetector.widget.UnderlinedTextView
                style="@style/TextHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intent_flags_title" />

            <LinearLayout
                android:id="@+id/intent_flags_layout"
                style="@style/ListLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
                -->

            <com.android.pvamu.androidmalwaredetector.widget.UnderlinedTextView
                style="@style/TextHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="HIDDEN INFORMATION PASSED IN INTENT"
                android:textColor="#FF0000"
                />

            <LinearLayout
                android:id="@+id/intent_extras_layout"
                style="@style/ListLayout"


                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />

            <com.android.pvamu.androidmalwaredetector.widget.UnderlinedTextView
                android:id="@+id/intent_matching_activities_header"
                style="@style/TextHeader"
                android:textColor="#FF0000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="POSSIBLE COMMUNICATING APPLICATIONS" />

            <LinearLayout
                android:id="@+id/intent_matchin_activities_layout"
                style="@style/ListLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/text"
                style="@style/ListLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reset_intent_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onResetIntent"
            android:text="@string/button_title_reset_intent"
            android:visibility="gone" />

        <Button
            android:id="@+id/resend_intent_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onSendIntent"
            android:text="@string/button_title_resend_intent" />
    </LinearLayout>

</LinearLayout>